--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -208,12 +208,12 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6">
                     <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356; height: 75px; color: white; " href="course.html"> Our Courses</a>
+                        <a class="c-btn" style="background-color: #002356; height: 75px; color: white; padding-top: 30px; " href="course.html"> Our Courses</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 ">
                     <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356;  color: white;" href="registration.html">Get free career Counselling here</a>
+                        <a class="c-btn" style="background-color: #002356;  color: white; padding-top: 21px; height: 75px;" href="registration.html">Get free career Counselling here</a>
                     </div>
                 </div>
             </div>
@@ -311,9 +311,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_1.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/HTML.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">HTML</a></h3>
+                                   <!-- <h3><a href="curriculum.html">HTML</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -325,9 +325,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_2.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/CORE JAVA.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">Core JAVA</a></h3>
+                                <!--    <h3><a href="curriculum.html">Core JAVA</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -339,9 +339,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_3.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/aem SLING.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">AEM Sling & dispatcher</a></h3>
+                                  <!--  <h3><a href="curriculum.html">AEM Sling & dispatcher</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -353,9 +353,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_4.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/CONFIGURATION.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">Configuration</a></h3>
+                                  <!--  <h3><a href="curriculum.html">Configuration</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -367,9 +367,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_5.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/aem TEMPLATES.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">AEM templates</a></h3>
+                                  <!--  <h3><a href="curriculum.html">AEM templates</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -381,9 +381,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_6.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/aem COMPONENTS.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">AEM components </a></h3>
+                                   <!-- <h3><a href="curriculum.html">AEM components </a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -395,9 +395,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_7.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/aem WORKFLOWS.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">AEM workflows</a></h3>
+                                   <!-- <h3><a href="curriculum.html">AEM workflows</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -409,9 +409,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_8.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/AEM UI.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">AEM UI </a></h3>
+                                  <!--  <h3><a href="curriculum.html">AEM UI </a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
@@ -423,9 +423,9 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="curriculum.html"><img src="assets/img/gallery/img_9.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/CAPSTONE PROJECT.jpg" alt=""></a>
                                 <div class="gallery-text">
-                                    <h3><a href="curriculum.html">Capstone project</a></h3>
+                                   <!-- <h3><a href="curriculum.html">Capstone project</a></h3> -->
 
                                 </div>
                                 <div class="gallery-icon">
