--- a/one/3d cards.html
+++ b/one/3d cards.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,20 +12,18 @@
   justify-content: center;
   align-items: center;
   height: 400px;
-  perspective: 800px;
 }
 
 .card {
   position: relative;
   width: 250px;
   height: 300px;
-  transform-style: preserve-3d;
-  transition: transform 1s;
+  transition: transform 0.5s;
   margin: 10px;
 }
 
 .card:hover {
-  transform: rotateX(180deg);
+  transform: rotateZ(180deg);
 }
 
 .front, .back {
@@ -35,20 +32,19 @@
   left: 0;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
 }
 
 .front {
   background-color: #f2f2f2;
   z-index: 2;
+  transform: translateY(150px);
 }
 
 .back {
-  transform: rotateX(180deg);
   background-color: #3c3c3c;
   color: #fff;
-  padding: 0px;
-  margin: 0PX 10px 10px 0px ;
+  padding: 10px;
+  transform: rotateX(180deg) translateZ(150px);
 }
 
 img {
@@ -64,36 +60,40 @@ img {
   }
   
   .card {
-    width: 80%;
-    height: 300px;
+    width: 100%;
+    height: 200px;
     margin: 10px 0;
+  }
+  
+  .front, .back {
+    transform: none;
   }
 }
 
 
 </style>
 <body>
-  <div class="card-container">
-    <div class="card">
-      <div class="front">
-        <img src="./WhatsApp Image 2023-02-08 at 17.47.20.jpeg" alt="Image 1">
+    <div class="card-container">
+        <div class="card">
+          <div class="front">
+            <img src="image1.jpg" alt="Image 1">
+          </div>
+          <div class="back">
+            <h2>Card 1</h2>
+            <p>Back content goes here</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="front">
+            <img src="image2.jpg" alt="Image 2">
+          </div>
+          <div class="back">
+            <h2>Card 2</h2>
+            <p>Back content goes here</p>
+          </div>
+        </div>
       </div>
-      <div class="back">
-        <h2>Card 1</h2>
-        <p>Back content goes here</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="front">
-        <img src="./WhatsApp Image 2023-02-08 at 17.47.22.jpeg" alt="Image 2">
-      </div>
-      <div class="back">
-        <h2>Card 2</h2>
-        <p>Back content goes here</p>
-      </div>
-    </div>
-  </div>
-  
+      
+      
 </body>
-
 </html>
