--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
+
 <body>
 	<ul>
 		<li><a href="./fastkart/front-end/index.html">E-commerce</a></li>
 		<li><a href="./preview.colorlib.com/theme/instylr/index.html">Botique</a></li>
 		<li><a href="./kinder/index.html">Pre-school</a></li>
 		<li><a href="./nxtecs/index.html">Nxtecs</a></li>
-		
+
 	</ul>
+	<ul>
+		<li><a href="./one/3d cards.html">cards</a></li>
+		<li><a href="./one/card1.html">cards</a></li>
+		<li><a href="./one/carousal.html">carousal</a></li>
+		<li><a href="./one/navigation/Nvigation.html">navigation</a></li>
+		<li><a href="./one/page.html">one page</a></li>
+		<li><a href="./one/verticle rotating cars .html">cards</a></li>
+	</ul>
+
 </body>
+
 </html>
