--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<li><a href="./one/navigation/Nvigation.html">navigation</a></li>
 		<li><a href="./one/page.html">one page</a></li>
 		<li><a href="./one/verticle rotating cars .html">cards</a></li>
+		<li><a href="./one/banners.html">banner</a></li>
 	</ul>
 
 </body>
