--- a/one/navigation/Nvigation.html
+++ b/one/navigation/Nvigation.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <input type="checkbox" id="check">
@@ -20,10 +24,79 @@
             <li><a href="#">about</a></li>
             <li><a href="#">services</a></li>
             <li><a href="#">contact us</a></li>
-           <!-- <button class="btn">Log in</button> -->
-        </nav>
-        </ul>
-        
-    <section></section>
+            <!-- <button class="btn">Log in</button> -->
+    </nav>
+    </ul>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to My Website</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at sagittis nisi, sit amet dictum odio.
+                Integer eget faucibus quam.</p>
+            <a href="#" class="hero-button">Learn More</a>
+        </div>
+    </section>
+    <section class="cards">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1677495577887-e3dc724ead78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="Card 1 Image">
+            <div class="card-content">
+                <h2>Card 1 Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at sagittis nisi, sit amet dictum
+                    odio.</p>
+                <a href="#" class="card-button">Learn More</a>
+                <div class="card-social-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1677495577887-e3dc724ead78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="Card 2 Image">
+            <div class="card-content">
+                <h2>Card 2 Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at sagittis nisi, sit amet dictum
+                    odio.</p>
+                <a href="#" class="card-button">Learn More</a>
+                <div class="card-social-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1677495577887-e3dc724ead78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="Card 3 Image">
+            <div class="card-content">
+                <h2>Card 3 Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at sagittis nisi, sit amet dictum
+                    odio.</p>
+                <a href="#" class="card-button">Learn More</a>
+                <div class="card-social-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1677495577887-e3dc724ead78?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="Card 4 Image">
+            <div class="card-content">
+                <h2>Card 4 Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at sagittis nisi, sit amet dictum
+                    odio.</p>
+                <a href="#" class="card-button">Learn More</a>
+                <div class="card-social-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
