--- a/one/navigation/Nvigation.html
+++ b/one/navigation/Nvigation.html
@@ -96,6 +96,45 @@
             </div>
         </div>
     </section>
+    <div class="marquee">
+        <div class="marquee-content">
+          <img src="logo1.png" alt="Logo 1">
+          <img src="logo2.png" alt="Logo 2">
+          <img src="logo3.png" alt="Logo 3">
+          <img src="logo4.png" alt="Logo 4">
+          <img src="logo5.png" alt="Logo 5">
+        </div>
+      </div>
+      
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h3>About Us</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed blandit massa vel mauris sollicitudin dignissim. Phasellus ultrices tellus eget ipsum ornare molestie scelerisque eros dignissim.</p>
+            </div>
+            <div class="col-md-4">
+              <h3>Contact Us</h3>
+              <ul>
+                <li>123 Main Street</li>
+                <li>Anytown, USA 12345</li>
+                <li>(555) 555-5555</li>
+                <li>email@example.com</li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <h3>Follow Us</h3>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      
 
 </body>
 
