--- a/one/3d cards.html
+++ b/one/3d cards.html
@@ -19,11 +19,11 @@
   width: 250px;
   height: 300px;
   transition: transform 0.5s;
-  margin: 10px;
+  margin: 10px 50PX;
 }
 
 .card:hover {
-  transform: rotateZ(180deg);
+  transform: rotateY(180deg);
 }
 
 .front, .back {
