--- a/one/carousal.html
+++ b/one/carousal.html
@@ -38,18 +38,18 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
   padding: 20px;
   text-align: center;
   transition: transform 0.5s;
-  transform: translateX(100%);
+  transform: translateY(100%);
 }
 .slide:hover img {
   transform: scale(1.1);
 }
 .slide:hover .caption {
-  transform: translateX(0%);
+  transform: translateY(0%);
 }
 .caption h2 {
   margin-top: 0;
