--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<li><a href="./one/page.html">one page</a></li>
 		<li><a href="./one/verticle rotating cars .html">cards</a></li>
 		<li><a href="./one/banners.html">banner</a></li>
+		<li><a href="./one/cardhover.html">Card hover</a></li>
 	</ul>
 
 </body>
