--- a/one/cardhover.html
+++ b/one/cardhover.html
@@ -143,48 +143,48 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="imgBx" data-text="Design">
+            <div class="imgBx" data-text="CARD1">
                 <img src="small-top.png" alt="">
             </div>
             <div class="content">
                 <div>
-                    <h3>Design</h3>
+                    <h3>CARD-1</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, ipsam!</p>
                     <a href="#">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="imgBx" data-text="code">
+            <div class="imgBx" data-text="CARD2">
                 <img src="small-top.png" alt="">
             </div>
             <div class="content">
                 <div>
-                    <h3>Code</h3>
+                    <h3>CARD-2</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, ipsam!</p>
                     <a href="#">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="imgBx" data-text="Launch">
+            <div class="imgBx" data-text="CARD3">
                 <img src="small-top.png" alt="">
             </div>
             <div class="content">
                 <div>
-                    <h3>Launch</h3>
+                    <h3>CARD-3</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, ipsam!</p>
                     <a href="#">Read More</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="imgBx" data-text="Earn">
+            <div class="imgBx" data-text="CARD4">
                 <img src="small-top.png" alt="">
             </div>
             <div class="content">
                 <div>
-                    <h3>earn</h3>
+                    <h3>CARD-4</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, ipsam!</p>
                     <a href="#">Read More</a>
                 </div>
