--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<li><a href="./one/verticle rotating cars .html">cards</a></li>
 		<li><a href="./one/banners.html">banner</a></li>
 		<li><a href="./one/cardhover.html">Card hover</a></li>
+		<li><a href="./one/testimonial.html">Testimonial</a></li>
 	</ul>
 
 </body>
