--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="./preview.colorlib.com/theme/instylr/index.html">Botique</a></li>
 		<li><a href="./kinder/index.html">Pre-school</a></li>
 		<li><a href="./nxtecs/index.html">Nxtecs</a></li>
+		<li><a href="./Chow restaurant/theme/index.html">Chow restaurant</a></li>
 
 	</ul>
 	<ul>
