--- a/Chow restaurant/theme/about.html
+++ b/Chow restaurant/theme/about.html
@@ -49,7 +49,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link active" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">Blogs</a>
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-8 text-center col-sm-12 ">
-            <h1 data-aos="fade-up">About CHOW</h1>
+            <h1 data-aos="fade-up">About us</h1>
             <p class="mb-5" data-aos="fade-up" data-aos-delay="100">From the moment you walk through our doors, we
               strive to make you feel welcome and appreciated.</p>
             <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Get
@@ -258,7 +258,7 @@
         <div class="col-md-3 mb-5">
           <h3>Quick Links</h3>
           <ul class="list-unstyled footer-link">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Disclaimers</a></li>
             <li><a href="#">Contact</a></li>
@@ -267,20 +267,20 @@
         <div class="col-md-3">
         </div>
       </div>
-      <!--  <div class="row">
+      <div class="row">
         <div class="col-12 text-md-center text-left">
-          <p>
+          <p style="padding-bottom: 40px;">
 
             Copyright &copy;
             <script data-cfasync="false"
               src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
+            <!-- <i class="fa fa-heart text-danger" aria-hidden="true"></i> --> by <a href="https://prabalservices.com/"
+              target="_blank">prabalservices</a>
 
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
   </footer>
 
