--- a/Chow restaurant/theme/contact.html
+++ b/Chow restaurant/theme/contact.html
@@ -49,7 +49,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">Blogs</a>
@@ -231,7 +231,8 @@
         <div class="col-md-4 mb-5">
           <h3>About Us</h3>
           <p class="mb-5">We're a team of passionate foodies dedicated to delivering an exceptional dining experience to
-            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and hospitality.</p>
+            every guest. Our story began with a vision to create a restaurant that celebrates the art of cooking and
+            hospitality.</p>
           <ul class="list-unstyled footer-link d-flex footer-social">
             <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
             <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
@@ -252,14 +253,15 @@
                 <span>Bangalore, Karnataka</span>
               </li>
               <li class="d-block"><span class="d-block text-black">Phone:</span><span>+91 963 230 5984</span></li>
-              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span></li>
+              <li class="d-block"><span class="d-block text-black">Email:</span><span>pradeepl220220@gmail.com</span>
+              </li>
             </ul>
           </div>
         </div>
         <div class="col-md-3 mb-5">
           <h3>Quick Links</h3>
           <ul class="list-unstyled footer-link">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Disclaimers</a></li>
             <li><a href="#">Contact</a></li>
@@ -268,20 +270,20 @@
         <div class="col-md-3">
         </div>
       </div>
-       <!--  <div class="row">
+      <div class="row">
         <div class="col-12 text-md-center text-left">
-          <p>
+          <p style="padding-bottom: 40px;">
 
             Copyright &copy;
             <script data-cfasync="false"
               src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
+            <!-- <i class="fa fa-heart text-danger" aria-hidden="true"></i> --> by <a href="https://prabalservices.com/"
+              target="_blank">prabalservices</a>
 
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
   </footer>
 
