--- a/Chow restaurant/theme/index.html
+++ b/Chow restaurant/theme/index.html
@@ -49,7 +49,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">Blogs</a>
@@ -160,31 +160,45 @@
       <div class="owl-carousel centernonloop">
         <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="100">
           <div class="text">
-            <p class="dishes-price">Rs.110.50</p>
+            <p class="dishes-price">₹110.50</p>
             <h2 class="dishes-heading">Organic tomato salad, gorgonzola cheese, capers</h2>
           </div>
           <img src="img/dishes_1.jpg" alt="" class="img-fluid">
         </a>
         <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="200">
           <div class="text">
-            <p class="dishes-price">Rs.120.00</p>
+            <p class="dishes-price">₹120.00</p>
             <h2 class="dishes-heading">Baked broccoli</h2>
           </div>
           <img src="img/dishes_2.jpg" alt="" class="img-fluid">
         </a>
         <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="300">
           <div class="text">
-            <p class="dishes-price">Rs.110.00</p>
+            <p class="dishes-price">₹110.00</p>
             <h2 class="dishes-heading">Spicy meatballs</h2>
           </div>
           <img src="img/dishes_3.jpg" alt="" class="img-fluid">
         </a>
         <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="400">
           <div class="text">
-            <p class="dishes-price">Rs.120.00</p>
+            <p class="dishes-price">₹120.00</p>
             <h2 class="dishes-heading">Eggplant parmigiana</h2>
           </div>
           <img src="img/dishes_4.jpg" alt="" class="img-fluid">
+        </a>
+        <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="300">
+          <div class="text">
+            <p class="dishes-price">₹110.00</p>
+            <h2 class="dishes-heading">Spicy meatballs</h2>
+          </div>
+          <img src="img/dishes_3.jpg" alt="" class="img-fluid">
+        </a>
+        <a href="#" class="item-dishes" data-aos="fade-right" data-aos-delay="200">
+          <div class="text">
+            <p class="dishes-price">₹120.00</p>
+            <h2 class="dishes-heading">Baked broccoli</h2>
+          </div>
+          <img src="img/dishes_2.jpg" alt="" class="img-fluid">
         </a>
       </div>
     </div>
@@ -207,7 +221,7 @@
             <div class="text order-1">
               <h3>Grilled Caesar salad, shaved reggiano</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.12.00</p>
+              <p class="text-primary h3">₹12.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -215,7 +229,7 @@
             <div class="text">
               <h3>Spicy Calamari and beans</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
         </div>
@@ -225,7 +239,7 @@
             <div class="text order-1">
               <h3>Bacon wrapped wild gulf prawns</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.180.00</p>
+              <p class="text-primary h3">₹180.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -233,7 +247,7 @@
             <div class="text">
               <h3>Seared ahi tuna fillet*, honey-ginger sauce</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.160.00</p>
+              <p class="text-primary h3">₹160.00</p>
             </div>
           </div>
         </div>
@@ -245,7 +259,7 @@
             <div class="text order-1">
               <h3>Grilled Caesar salad, shaved reggiano</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -253,7 +267,7 @@
             <div class="text">
               <h3>Spicy Calamari and beans</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
         </div>
@@ -263,7 +277,7 @@
             <div class="text order-1">
               <h3>Bacon wrapped wild gulf prawns</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.180.00</p>
+              <p class="text-primary h3">₹180.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -271,7 +285,7 @@
             <div class="text">
               <h3>Seared ahi tuna fillet*, honey-ginger sauce</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.160.00</p>
+              <p class="text-primary h3">₹160.00</p>
             </div>
           </div>
         </div>
@@ -444,7 +458,7 @@
         <div class="col-md-3 mb-5">
           <h3>Quick Links</h3>
           <ul class="list-unstyled footer-link">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Disclaimers</a></li>
             <li><a href="#">Contact</a></li>
@@ -453,20 +467,20 @@
         <div class="col-md-3">
         </div>
       </div>
-      <!--  <div class="row">
+      <div class="row">
         <div class="col-12 text-md-center text-left">
-          <p>
+          <p style="padding-bottom: 40px;">
 
             Copyright &copy;
             <script data-cfasync="false"
               src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
+            <!-- <i class="fa fa-heart text-danger" aria-hidden="true"></i> --> by <a href="https://prabalservices.com/"
+              target="_blank">prabalservices</a>
 
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
   </footer>
 
