--- a/Chow restaurant/theme/news.html
+++ b/Chow restaurant/theme/news.html
@@ -49,7 +49,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="news.html">Blogs</a>
@@ -240,7 +240,7 @@
         <div class="col-md-3 mb-5">
           <h3>Quick Links</h3>
           <ul class="list-unstyled footer-link">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Disclaimers</a></li>
             <li><a href="#">Contact</a></li>
@@ -249,20 +249,20 @@
         <div class="col-md-3">
         </div>
       </div>
-      <!--  <div class="row">
+      <div class="row">
         <div class="col-12 text-md-center text-left">
-          <p>
+          <p style="padding-bottom: 40px;">
 
             Copyright &copy;
             <script data-cfasync="false"
               src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
+            <!-- <i class="fa fa-heart text-danger" aria-hidden="true"></i> --> by <a href="https://prabalservices.com/"
+              target="_blank">prabalservices</a>
 
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
   </footer>
 
