--- a/Chow restaurant/theme/services.html
+++ b/Chow restaurant/theme/services.html
@@ -49,7 +49,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">Blogs</a>
@@ -147,7 +147,7 @@
             <div class="text order-1">
               <h3>Grilled Caesar salad, shaved reggiano</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -155,7 +155,7 @@
             <div class="text">
               <h3>Spicy Calamari and beans</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="text order-1">
               <h3>Bacon wrapped wild gulf prawns</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.180.00</p>
+              <p class="text-primary h3">₹180.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -173,7 +173,7 @@
             <div class="text">
               <h3>Seared ahi tuna fillet*, honey-ginger sauce</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.160.00</p>
+              <p class="text-primary h3">₹160.00</p>
             </div>
           </div>
         </div>
@@ -185,7 +185,7 @@
             <div class="text order-1">
               <h3>Grilled Caesar salad, shaved reggiano</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -193,7 +193,7 @@
             <div class="text">
               <h3>Spicy Calamari and beans</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.120.00</p>
+              <p class="text-primary h3">₹120.00</p>
             </div>
           </div>
         </div>
@@ -203,7 +203,7 @@
             <div class="text order-1">
               <h3>Bacon wrapped wild gulf prawns</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.180.00</p>
+              <p class="text-primary h3">₹180.00</p>
             </div>
           </div>
           <div class="sched d-block d-lg-flex">
@@ -211,7 +211,7 @@
             <div class="text">
               <h3>Seared ahi tuna fillet*, honey-ginger sauce</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...</p>
-              <p class="text-primary h3">Rs.160.00</p>
+              <p class="text-primary h3">₹160.00</p>
             </div>
           </div>
         </div>
@@ -276,7 +276,7 @@
         <div class="col-md-3 mb-5">
           <h3>Quick Links</h3>
           <ul class="list-unstyled footer-link">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About us</a></li>
             <li><a href="#">Terms of Use</a></li>
             <li><a href="#">Disclaimers</a></li>
             <li><a href="#">Contact</a></li>
@@ -285,20 +285,20 @@
         <div class="col-md-3">
         </div>
       </div>
-       <!--  <div class="row">
+      <div class="row">
         <div class="col-12 text-md-center text-left">
-          <p>
+          <p style="padding-bottom: 40px;">
 
             Copyright &copy;
             <script data-cfasync="false"
               src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
             <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
+            <!-- <i class="fa fa-heart text-danger" aria-hidden="true"></i> --> by <a href="https://prabalservices.com/"
+              target="_blank">prabalservices</a>
 
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
   </footer>
 
