--- a/Chow restaurant/theme/news.html
+++ b/Chow restaurant/theme/news.html
@@ -169,7 +169,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5" data-aos="fade-up">
+     <!-- <div class="row mt-5" data-aos="fade-up">
         <div class="col-12 text-center">
           <a href="#" class="p-3">1</a>
           <a href="#" class="p-3">2</a>
@@ -177,7 +177,7 @@
           <span class="p-3">...</span>
           <a href="#" class="p-3">5</a>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <footer class="site-footer" role="contentinfo">
